# godolint-coatl

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg  tox.ini
.github/workflows/: ci.yml  publish.yml
