[metadata]
name = godolint_coatl
version = 1.2.1
description = Python wrapper around invoking godolint (https://github.com/zabio3/godolint)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coatl-dev/godolint-coatl
author = César Román
author_email = cesar@coatl.dev
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Funding = https://github.com/sponsors/cesarcoatl
    Source = https://github.com/coatl-dev/godolint-coatl
    Tracker = https://github.com/coatl-dev/godolint-coatl/issues

[options]
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [godolint]
    group = godolint-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/zabio3/godolint/releases/download/v1.2.1/godolint_1.2.1_darwin_amd64.tar.gz
    sha256 = 9261010f2120c36609b5aedec87e06cd121b6700deb86ee6418bbfd0f648667e
    extract = tar
    extract_path = godolint
    [godolint]
    group = godolint-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/zabio3/godolint/releases/download/v1.2.1/godolint_1.2.1_linux_amd64.tar.gz
    sha256 = 15cfe970e3b611e6e505bb4a70ffef64b1cc8f5fd0904d3678c78c390b7152fb
    extract = tar
    extract_path = godolint
    [godolint.exe]
    group = godolint-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/zabio3/godolint/releases/download/v1.2.1/godolint_1.2.1_windows_amd64.zip
    sha256 = 6c1427af00de7c2cd05699e294ea36848899cd54b64f045e6ba9381e67604d30
    extract = zip
    extract_path = godolint.exe
